# arkui_for_macos

./: README.md
capability/clipboard/: clipboard_impl.mm
capability/environment/: environment_impl.mm
capability/font/: system_font_manager.mm
capability/surface/: AceSurfacePlugin.h  AceSurfacePlugin.mm  AceSurfaceView.h  AceSurfaceView.mm  BUILD.gn
capability/texture/: AceTextureResourcePlugin.h  AceTextureResourcePlugin.mm  BUILD.gn
capability/vibrator/: haptic_vibrator.h  haptic_vibrator.mm
capability/video/: AceVideo.h  AceVideo.mm  AceVideoResourcePlugin.mm  BUILD.gn
capability/web/: AceWeb.h  AceWeb.mm  AceWebInfoManager.mm  AceWebResourcePlugin.h  AceWebResourcePlugin.mm  AceWebView.h  AceWebView.mm  BUILD.gn
entrance/: AcePlatformPluginMac.h  AcePlatformPluginMac.mm  AceSurfaceHolder.h  AceTextureHolder.h  BUILD.gn  MacAppDelegate.h  MacAppDelegate.mm  WindowView.h  WindowView.mm  ace_application_info_impl.cpp  ace_application_info_impl.h  ace_bridge.mm  ace_platform_plugin.cpp  ace_platform_plugin.h  ace_pointer_data.cc  ace_resource_register.cpp  display_info.mm  display_manager_agent.cpp  dump_helper.h  mac_accessibility_bridge.h  mac_accessibility_bridge.mm  mac_text_input.h  mac_text_input.mm  main.mm  mmi_event_convertor.h  mmi_event_convertor.mm  virtual_rs_window.h  virtual_rs_window.mm
entrance/interaction/: interaction_impl.cpp  interaction_impl.h
osal/: BUILD.gn  accessibility_manager_impl.cpp  accessibility_manager_impl.h  download_manager_mac.mm  dynamic_module_helper.mm  exception_handler.cpp  fetch_manager.cpp  file_asset_provider.cpp  image_source_ios.cpp  input_manager.cpp  input_method_manager_ios.cpp  log_wrapper.cpp  mac_link_stubs.cpp  mouse_style_ios.cpp  picture_ios.cpp  picture_ios.h  pixel_map_ios.cpp  pixel_map_ios.h  resource_adapter_impl.cpp  resource_adapter_impl_v2.cpp  resource_convertor.cpp  resource_path_util.mm  resource_theme_style.cpp  subwindow_ios.cpp  subwindow_ios.h  system_bar_style_ohos.cpp  system_properties.cpp  want_wrap_ios.cpp
stage/ability/: AbilityLoader.h  AbilityLoader.mm  BUILD.gn  InstanceIdGenerator.h  StageApplication.h  StageApplication.mm  StageAssetManager.h  StageAssetManager.mm  StageConfigurationManager.h  StageConfigurationManager.mm  StageContainerView.h  StageContainerView.mm  StageViewController.h  StageViewController.mm  ability_context_adapter.h  ability_context_adapter.mm  application_context_adapter.h  stage_application_info_adapter.cpp  stage_application_info_adapter.h  stage_asset_provider.h  stage_asset_provider.mm  version_printer.cpp  version_printer.h  window_view_adapter.h  window_view_adapter.mm
stage/uicontent/: BUILD.gn  ace_container_sg.cpp  ace_container_sg.h  ace_view_sg.cpp  ace_view_sg.h  ui_content_impl.cpp  ui_content_impl.h  ui_event_monitor.cpp
