# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Phase 2 path X (M1): macOS entrance source set. Lean mirror of the iOS entrance
# (window + surface + pointer plumbing); the heavy capability/plugin subdirs are
# out of scope for M1 rendering.

import("//build/ohos.gni")
import("//foundation/arkui/ace_engine/ace_config.gni")
import("//foundation/graphic/graphic_2d/graphic_config.gni")

template("ace_macos_source_set") {
  forward_variables_from(invoker, "*")

  ohos_source_set(target_name) {
    defines += invoker.defines
    cflags_cc += invoker.cflags_cc

    include_dirs = [
      "$ace_root/frameworks",
      "$ace_root",
      "$ace_root/adapter/macos/entrance",
      "$ace_root/adapter/macos/stage/ability",
      "//foundation/appframework/window_manager/interfaces/innerkits/wm",
      "//foundation/appframework/window_manager/interfaces/innerkits/dm",
      "//foundation/appframework/window_manager/dm/include",
      "//foundation/appframework/window_manager/utils/include",
      "//foundation/graphic/graphic_surface/interfaces/inner_api/surface",
      "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
      "//foundation/graphic/graphic_2d/rosen/modules/render_service_client/core",
      # Phase 0 path X: napi's native_node_api.h pulls js_native_api.h, which
      # lives in third_party/node/src (napi adds it as a private include only).
      "//third_party/node/src",
      # Phase 0 path X: "napi/native_api.h" lives under napi/interfaces/kits.
      "//foundation/arkui/napi/interfaces/kits",
      # Phase 0 path X: the mmi event convertor pulls the MMI PointerEvent header
      # ("pointer_event.h") from the multimodalinput innerkits.
      "//foundation/multimodalinput/input/interfaces/native/innerkits/event/include",
      # Phase 0 path X (M1 格-c1): render_context_gl.h (GetResourceContext share
      # group) for the FBO -> CAOpenGLLayer presentation handshake.
      "//foundation/graphic/graphic_2d/rosen/modules/2d_graphics/src",
    ]

    sources = [
      "WindowView.mm",
      # Phase 0 path X: macOS interaction shim (drag/InteractionInterface impl),
      # mirrors adapter/ios/entrance/interaction. Provides InteractionImpl so the
      # InteractionInterface singleton resolves at link.
      "interaction/interaction_impl.cpp",
      # Phase 0 path X: macOS mmi event convertor (used by ace_view_sg.cpp and
      # virtual_rs_window.mm); mirrors adapter/ios/entrance/mmi_event_convertor.
      "mmi_event_convertor.mm",
      # Phase 0 path X: macOS copies of the iOS entrance helpers needed at link
      # (AcePlatformPlugin, DumpHelper, InspectorJsonValue/ui_session,
      # DisplayInfo/DisplayManagerAgent — AppKit NSScreen-backed display info).
      "ace_platform_plugin.cpp",
      "dump_helper.cpp",
      "ui_session/ui_session_json_util.cpp",
      "display_info.mm",
      "display_manager_agent.cpp",
      # Phase 0 path X (M1 link): AceApplicationInfo concrete impl (startup-
      # critical singleton); real impl ported from iOS (UIKit-free).
      "ace_application_info_impl.cpp",
      "ace_pointer_data.cc",
      "ace_pointer_data_packet.cc",
      "touch_event.cpp",
      "touch_event_convertor.cpp",
      "utils.cpp",
      "virtual_rs_window.mm",
    ]

    if (target_cpu == "arm64") {
      defines += [ "_ARM64_" ]
    }

    defines += [
      "BUILD_FOR_ARKUI",
      "CROSS_PLATFORM",
      "ACE_ENABLE_GL",
    ]

    configs = [
      "$ace_root:ace_config",
      "//foundation/appframework/ability/ability_runtime/cross_platform/interfaces/kits/native/ability:abilitykit_native_config",
      "//foundation/appframework/ability/ability_runtime/cross_platform/interfaces/kits/native/appkit:appkit_native_config",
      "//foundation/appframework/ability/ability_runtime/cross_platform/interfaces/inner_api/hilog:ability_cross_platform_hilog_config",
      "//foundation/appframework/ability/ability_runtime/cross_platform/interfaces/inner_api/jsruntime:jsruntime_config",
    ]

    cflags_objc = [
      "-fvisibility=default",
      "-fobjc-weak",
    ]
    cflags_objcc = cflags_objc

    deps = [
      "//foundation/graphic/graphic_2d/rosen/modules/render_service_client:librender_service_client_static",
    ]

    frameworks = [
      "AppKit.framework",
      "OpenGL.framework",
      "QuartzCore.framework",
      "CoreVideo.framework",
    ]

    subsystem_name = "arkui"
  }
}

foreach(item, ace_platforms) {
  platform = item.name
  if (platform == "mac") {
    ace_macos_source_set("ace_macos_entrance") {
      defines = []
      cflags_cc = []
      config = {
      }
      if (defined(item.config)) {
        config = item.config
      }
      if (defined(config.defines)) {
        defines = config.defines
      }
      if (defined(config.cflags_cc)) {
        cflags_cc = config.cflags_cc
      }
    }
  }
}
