# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/arkui/ace_engine/ace_config.gni")

# M5 surface carrier (shared by Video + XComponent). AceSurfaceView is an NSView with a plain
# CALayer that hosts the native content (AVPlayerLayer sublayer for Video). Ported from
# adapter/ios/capability/surface; device-orientation rotation is no-op'd on macOS.
ohos_source_set("ace_surface_macos") {
  sources = [
    "AceSurfacePlugin.mm",
    "AceSurfaceView.mm",
  ]

  defines = [ "MAC_PLATFORM" ]
  if (target_cpu == "arm64") {
    defines += [ "_ARM64_" ]
  }

  include_dirs = [
    "$ace_root",
    "$ace_root/frameworks",
    "$ace_root/adapter/macos/entrance",
    "$ace_root/adapter/macos/entrance/resource",
    "$ace_root/adapter/macos/stage/ability",
    "$ace_root/adapter/macos/capability/surface",
    "//foundation/arkui/napi/interfaces/kits",
    "//third_party/node/src",
  ]

  configs = [ "$ace_root:ace_config" ]
  cflags_objc = [
    "-fvisibility=default",
    "-fobjc-weak",
  ]
  cflags_objcc = cflags_objc
  frameworks = [
    "AppKit.framework",
    "QuartzCore.framework",
  ]

  subsystem_name = "arkui"
  part_name = "ace_engine"
}
