# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/arkui/ace_engine/ace_config.gni")

# M5 Web carrier (WKWebView). The cross-platform WebDelegateCross/web_pattern (appframework)
# call the OC bridge functions implemented here; the .cpp are shared with iOS verbatim and the
# .mm are ported UIKit->AppKit (UIView->NSView, scroll/gesture/fullscreen gated behind
# MAC_PLATFORM since macOS WKWebView exposes no UIScrollView and handles those natively).
ohos_source_set("ace_web_macos") {
  sources = [
    "AceWeb.mm",
    "AceWebCallbackObjectWrapper.cpp",
    "AceWebControllerBridge.mm",
    "AceWebDownloadImpl.cpp",
    "AceWebErrorReceiveInfoObject.cpp",
    "AceWebInfoManager.mm",
    "AceWebMessageExtImpl.cpp",
    "AceWebObject.cpp",
    "AceWebPatternBridge.cpp",
    "AceWebPatternOCBridge.mm",
    "AceWebResourcePlugin.mm",
    "AceWebSchemeHandler.cpp",
    "AceWebView.mm",
    "WebMessageChannel.mm",
    "scheme_handler/resource_handler.mm",
    "scheme_handler/resource_request.mm",
    "../vibrator/haptic_vibrator.mm",
  ]

  defines = [ "MAC_PLATFORM" ]
  if (target_cpu == "arm64") {
    defines += [ "_ARM64_" ]
  }

  include_dirs = [
    "$ace_root",
    "$ace_root/frameworks",
    "$ace_root/adapter/macos/entrance",
    "$ace_root/adapter/macos/entrance/resource",
    "$ace_root/adapter/macos/stage/ability",
    "$ace_root/adapter/macos/capability/web",
    "//foundation/appframework/arkui",
    "//foundation/graphic/graphic_2d/rosen/modules",
    "//foundation/arkui/ace_engine/frameworks/core/components/web/resource",
    "//foundation/arkui/ace_engine/frameworks/core/interfaces/native/utility",
    "//foundation/arkui/napi/interfaces/kits",
    "//third_party/node/src",
    "$skia_root_new",
  ]

  configs = [ "$ace_root:ace_config" ]

  cflags_objc = [
    "-fvisibility=default",
    "-fobjc-weak",
  ]
  cflags_objcc = cflags_objc

  frameworks = [
    "WebKit.framework",
    "AppKit.framework",
    "AVFoundation.framework",
    "Security.framework",
  ]

  subsystem_name = "arkui"
  part_name = "ace_engine"
}
