# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Phase 2 path X (M1): macOS stage/ability source set (NSViewController-based).

import("//build/ohos.gni")
import("//foundation/arkui/ace_engine/ace_config.gni")
import("//build_plugins/version.gni")

template("stage_macos_source_set") {
  forward_variables_from(invoker, "*")
  ohos_source_set(target_name) {
    defines = []
    defines += invoker.defines
    cflags_cc += invoker.cflags_cc

    configs = [
      "$ace_root:ace_config",
      "//foundation/appframework/ability/ability_runtime/cross_platform/interfaces/kits/native/appkit:appkit_native_config",
      "//third_party/json:nlohmann_json_config",
    ]

    include_dirs = [
      "./",
      "//foundation/arkui/ace_engine/adapter/macos/entrance",
      # Phase 0 path X: StageViewController.mm needs dump_helper.h, which only the
      # iOS entrance provides. Safe here: this target's sources do not include
      # virtual_rs_window.h, so the iOS copy of that header cannot collide.
      "//foundation/arkui/ace_engine/adapter/ios/entrance",
      "//foundation/appframework/ability/ability_runtime/cross_platform/interfaces/kits/native/appkit",
      "$ace_root/frameworks",
      "$ace_root",
    ]

    if (target_cpu == "arm64") {
      defines += [ "_ARM64_" ]
    }

    defines += [
      "BUILD_FOR_ARKUI",
      "ARKUI_X_VERSION=\"$arkuix_sdk_version\"",
    ]

    cflags_objc = [
      "-fvisibility=default",
      "-fobjc-arc",
      "-fobjc-weak",
      "-Wno-nullability-completeness",
      "-O0",
    ]
    cflags_objcc = cflags_objc

    sources = [
      "AbilityLoader.mm",
      "InstanceIdGenerator.mm",
      "StageApplication.mm",
      "StageAssetManager.mm",
      "StageConfigurationManager.mm",
      "StageContainerView.mm",
      "StageViewController.mm",
      "ability_context_adapter.mm",
      "application_context_adapter.mm",
      "stage_application_info_adapter.cpp",
      "stage_asset_provider.mm",
      "version_printer.cpp",
      "window_view_adapter.mm",
    ]
    deps = [
      "//foundation/appframework/ability/ability_runtime/cross_platform/interfaces/kits/native/appkit:cross_platform_appkit_native",
      "//foundation/arkui/ace_engine/adapter/macos/entrance:ace_macos_entrance",
    ]

    frameworks = [
      "CoreFoundation.framework",
      "Foundation.framework",
      "AppKit.framework",
    ]

    subsystem_name = "arkui"
  }
}

foreach(item, ace_platforms) {
  platform = item.name
  if (platform == "mac") {
    stage_macos_source_set("stage_macos_entrance") {
      defines = []
      cflags_cc = []
      config = {
      }
      if (defined(item.config)) {
        config = item.config
      }
      if (defined(config.defines)) {
        defines = config.defines
      }
      if (defined(config.cflags_cc)) {
        cflags_cc = config.cflags_cc
      }
    }
  }
}
